Kinda fix horizontal text overflow

--- a/edit/style.css
+++ b/edit/style.css
@@ -57,6 +57,7 @@ a {
    background: rgba(255, 255, 255, 0.7);
    border-radius: 10px;
    padding: 10px;
+   word-break: break-word;
 }
 
 .hovered .details {
